Changed web view progress bar to blue color, when payment is initiated with web payment option (KNET etc), web payment screened is opened before receiving charge response with redirection

--- a/goSellSDK/UI/Resources/Payment.storyboard
+++ b/goSellSDK/UI/Resources/Payment.storyboard
@@ -1498,7 +1498,7 @@
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="showsFullProgress" value="NO"/>
                                     <userDefinedRuntimeAttribute type="color" keyPath="progressColor">
-                                        <color key="value" red="0.32549019610000002" green="0.32549019610000002" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="value" red="0.0" green="0.60392156862745094" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
